--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -5797,36 +5797,36 @@ RUS_national_populist:0 "러시아 공화국"
 RUS_national_populist_ADJ:0 "러시아"
 RUS_national_populist_DEF:0 "러시아 공화국"
 
-RWD_totalist:0 "르완다 코뮌"
-RWD_totalist_ADJ:0 "르완다"
-RWD_totalist_DEF:0 "르완다 코뮌"
-RWD_syndicalist:0 "르완다 노동자정"
-RWD_syndicalist_ADJ:0 "르완다"
-RWD_syndicalist_DEF:0 "르완다 노동자정"
-RWD_radical_socialist:0"르완다 사회공화국"
-RWD_radical_socialist_ADJ:0 "르완다"
-RWD_radical_socialist_DEF:0 "르완다 사회공화국"
-RWD_social_democrat:0 "르완다 공화국"
-RWD_social_democrat_ADJ:0 "르완다"
-RWD_social_democrat_DEF:0 "르완다 공화국"
-RWD_social_liberal:0 "르완다 공화국"
-RWD_social_liberal_ADJ:0 "르완다"
-RWD_social_liberal_DEF:0 "르완다 공화국"
-RWD_market_liberal:0 "르완다 공화국"
-RWD_market_liberal_ADJ:0 "르완다"
-RWD_market_liberal_DEF:0 "르완다 공화국"
-RWD_social_conservative:0 "르완다 공화국"
-RWD_social_conservative_ADJ:0 "르완다"
-RWD_social_conservative_DEF:0 "르완다 공화국"
-RWD_authoritarian_democrat:0 "르완다 왕국"
-RWD_authoritarian_democrat_ADJ:0 "르완다"
-RWD_authoritarian_democrat_DEF:0 "르완다 왕국"
-RWD_paternal_autocrat:0 "르완다 왕국"
-RWD_paternal_autocrat_ADJ:0 "르완다"
-RWD_paternal_autocrat_DEF:0 "르완다 왕국"
-RWD_national_populist:0 "후투 제국"
-RWD_national_populist_ADJ:0 "후투"
-RWD_national_populist_DEF:0 "후투 제국"
+RWA_totalist:0 "르완다 코뮌"
+RWA_totalist_ADJ:0 "르완다"
+RWA_totalist_DEF:0 "르완다 코뮌"
+RWA_syndicalist:0 "르완다 노동자정"
+RWA_syndicalist_ADJ:0 "르완다"
+RWA_syndicalist_DEF:0 "르완다 노동자정"
+RWA_radical_socialist:0"르완다 사회공화국"
+RWA_radical_socialist_ADJ:0 "르완다"
+RWA_radical_socialist_DEF:0 "르완다 사회공화국"
+RWA_social_democrat:0 "르완다 공화국"
+RWA_social_democrat_ADJ:0 "르완다"
+RWA_social_democrat_DEF:0 "르완다 공화국"
+RWA_social_liberal:0 "르완다 공화국"
+RWA_social_liberal_ADJ:0 "르완다"
+RWA_social_liberal_DEF:0 "르완다 공화국"
+RWA_market_liberal:0 "르완다 공화국"
+RWA_market_liberal_ADJ:0 "르완다"
+RWA_market_liberal_DEF:0 "르완다 공화국"
+RWA_social_conservative:0 "르완다 공화국"
+RWA_social_conservative_ADJ:0 "르완다"
+RWA_social_conservative_DEF:0 "르완다 공화국"
+RWA_authoritarian_democrat:0 "르완다 왕국"
+RWA_authoritarian_democrat_ADJ:0 "르완다"
+RWA_authoritarian_democrat_DEF:0 "르완다 왕국"
+RWA_paternal_autocrat:0 "르완다 왕국"
+RWA_paternal_autocrat_ADJ:0 "르완다"
+RWA_paternal_autocrat_DEF:0 "르완다 왕국"
+RWA_national_populist:0 "후투 제국"
+RWA_national_populist_ADJ:0 "후투"
+RWA_national_populist_DEF:0 "후투 제국"
 
 SAF_totalist:0 "케이프 코뮌"
 SAF_totalist_ADJ:0 "남아프리카"
