--- a/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Baltic_Duchy_l_english.yml
@@ -130,7 +130,7 @@ balticduchy.80.a:0 "반란으로 정부가 전복됐다!"
 balticduchy.80.b:0 "군대가 민족주의자들을 물리쳤다!"
 
 balticduchy.81.t:0 "발트에 친러시아 정부가 세워지다."
-balticduchy.81.d:0 "프리발티카에서 에스토니아인과 라트비아인이 이끄는 친러시아운동 SOP는 새로운 친러시아 정부를 새우는데 성공했도, 우리 국가와 동맹 협정과 배타적 무역협정을 포함한 우호적인 관계를 세웠습니다."
+balticduchy.81.d:0 "프리발티카에서 에스토니아인과 라트비아인이 이끄는 친러시아운동 SOP는 새로운 친러시아 정부를 새우는데 성공했, 우리 국가와 동맹 협정과 배타적 무역협정을 포함한 우호적인 관계를 세웠습니다."
 balticduchy.81.a:0 "그들에게 우리의 영향력을 행사하라!"
 balticduchy.81.b:0 "그들이 우리 동맹에 가입하도록 강요하라!"
 balticduchy.81.c:0 "무시하라..."
