--- a/Kaiserreich Korean Translation/localisation/KR_Bolivia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bolivia_l_english.yml
@@ -2,7 +2,7 @@ l_english:
 
 ### Ideas ###
 BOL_nativetroops:0 "원주민 모병 문제"
-BOL_nativetroops_desc:0 "볼리비아의 원주민들은 우리 정부에 환멸을 느끼고 있습니다. 따라서, 우리 군대에 입대하는 사람은 거의 없습니다. 무력을 통해서든, 화해를 통해서든, 우리는 이 문제를 해결해야 한다."
+BOL_nativetroops_desc:0 "볼리비아의 원주민들은 우리 정부에 환멸을 느끼고 있습니다. 따라서, 우리 군대에 입대하는 사람은 거의 없습니다. 무력을 통해서든, 화해를 통해서든, 우리는 이 문제를 해결해야 합니다."
 BOL_PLOWSHARE:0 "칼을 쟁기로"
 BOL_PLOWSHARE_desc:0 "우리의 많은 참전 용사들과 이전의 혁명가들은 일자리를 얻었고 새로운 목적을 갖게 되었습니다."
 BOL_FARM:0 "집단 농장"
@@ -12,7 +12,7 @@ BOL_JUST_desc:0 "수세기 동안 볼리비아 원주민들은 2등 시민으로
 BOL_PRIVA:0 "민영화 재난"
 BOL_PRIVA_desc:0 "우리의 민영화 노력은 빠른 속도로 진행되면서 수많은 전직 공무원들을 하룻밤 사이에 실직 상태로 만들고 있습니다. 이는 비참한 결과를 가져왔습니다."
 BOL_tankimport:0 "전차 수입"
-BOL_tankimport_desc:0 "볼리비아는 전투에서 전차를 사용한 최초의 남미 국가입니다. 아군의 도움으로 우리는 훨씬 더 많은 장갑차를 모으기 시작했다."
+BOL_tankimport_desc:0 "볼리비아는 전투에서 전차를 사용한 최초의 남미 국가입니다. 아군의 도움으로 우리는 훨씬 더 많은 장갑차를 모으기 시작했습니다."
 BOL_customs_union:0 "안데스 공동 시장"
 BOL_customs_union_desc:0 "볼리비아와 페루는 이제 공동 시장을 가집니다! 오직 좋은 결과만이 나올 것입니다."
 
@@ -152,17 +152,17 @@ bol.1.b:0 "이는 볼리비아 인민들에 대한 배신이다!"
 bol.2.t:0 "볼리비아의 실업과 계급 구분"
 bol.2.d:0 "볼리비아에서 사실상 모든 산업이 민영화된 이후 중산층은 몰락하였으며 이제 모든 사람들이 원주민들만큼 가난해지거나 초갑부의 일원이 되었습니다. 볼리비아에 직장은 거의 남아 있지 않고, 여전히 존재하는 직장들은 괜찮은 임금이나 혜택을 주지 않습니다."
 bol.2.a:0 "우리가 할 수 있는 일은 아무 것도 없다"
-bol.3.t:0 "Aftermath of the Platine War"
-bol.3.d:0 "Since her formation Bolivia has not fared well in terms of her foreign policy, suffering hurtful losses. A border conflict with Chile led to the 'Saltpetre War' (1879 – 1883) which Bolivia lost despite an alliance with Peru, which ended with the nation having to cede the coastal province of Antofagasta, losing its access to the sea. In 1903 Brazil and Bolivia signed the Treaty of P?troplis, ceding the important rubber producing province Acre to Brazil. In 1932, tensions with Paraguay over the Gran Chaco region touched off what would later come to be known as the 'Great South American War'. Initially, Bolivia was successful against the Paraguayans had quickly overran the country, unfortunately though, the Bolivian occupation of Paraguay prompted Argentinean intervention in 1933, and a in a quick campaign Argentinean troops quickly liberated Paraguay and settled in for the winter.In 1934, Argentina renewed their offensive and scored several great victories against the Bolivian forces, and Bolivia seemed totally defeated. However, in another twist of the war, their hope was rekindled, as Brazil chose this time to intervene on their side. Unfortunately however the Brazilians focused the thrust of their offensives towards the La Plata River, leaving the Bolivians to look to their own defences, and this error of judgement lead to a humiliating final defeat of Bolivia at the hands of Argentina in late 1934. In the resulting peace, Bolivia was forced to accept the independence of Paraguay and relinquish their claims on the Gran Chaco region. After another short campaign by Argentinean forces Brazil was defeated in 1935, and in the resulting peace Uruguay and Paraguay were 'federated' with Argentina to create the Union of La Plata.In 1936 Bolivia stands at a crossroads, on one hand she is burning with a passion for revenge against 'La Plata', but on the other hand, she is wary of becoming too closely aligned with Brazil. However, with the government in La Plata beginning to assert claims over parts of Bolivia relations are becoming even further strained and closer ties with Brazil may well be unavoidable. Whatever the situation, Bolivia will have to play her cards wisely, for the moment of final decision will come soon…"
+bol.3.t:0 "플라타 전쟁의 여파"
+bol.3.d:0 "볼리비아는 건국 이후 외교에서 좋은 성과를 거두지 못했고, 괴로운 손실을 입어야 했습니다. 칠레와의 국경 분쟁으로 인해 '초석 전쟁' (1879 - 1883)이 일어났으며, 페루와 동맹했음에도 불구하고 볼리비아는 패배하여 해안 지역인 안토파가스타를 잃었습니다. 1903년, 볼리비아와 브라질은 페트로폴리스 조약을 맺어 중요한 고무 생산지인 아크리를 브라질에 양도했습니다. 1932년, 그란 차코 지역에서 파라과이와의 긴장 관계으로 후에 '대 남아메리카 전쟁'이라고 불려질 전쟁이 일어났습니다. 처음에는 볼리비아는 파라과이를 상대로 승리를 거두어 파라과이를 헤집었지만, 불행하게도 볼리비아의 파라과이 점령으로 1933년 아르헨티나가 개입하였고 아르헨티나 군대는 빠르게 파라과이를 해방하고 겨울을 나기 위해 주둔했습니다. 1934년, 아르헨티나는 다시 공격을 시작하여 불리비아 군대를 상대로 여러 차레 큰 승리를 거두었고 볼리비아는 완전히 패배한 것처럼 보였습니다. 하지만 브라질이 불리비아 편에 개입하면서 반전이 일어났고 볼리비아의 희망은 다시 불붙었습니다. 하지만 브라질은 라 플라타 강을 공격하는 데 초점을 맞췄으며, 이로 인해 볼리비아는 방어 태세를 갖췄습니다. 이 판단 착오로 1934년 후반에 볼리비아는 아르헨티나에 의해 굴욕적인 패배를 당했습니다. 그 결과 볼리비아는 파라과이의 독립을 받아들이고 그란 차코 지역에 대한 주장을 철회하는 수밖에 없었습니다. 아르헨티나 군대의 짧은 작전 끝에 브라질은 1925년 패배했고, 그 후 우루과이와 파라과이는 아르헨티나와 '연합'하여 라 플라타 연방을 결성했습니다. 1936년 볼리비아는 기로에 서 있으며, 한편으로는 라 플라타에 복수를 하겠다는 열정으로 불타고 있지만, 다른 한편으로는 브라질과 너무 가깝게 지내는 것을 경계하고 있습니다. 하지만 라 플라타 정부가 볼리비아의 일부 지역을 주장하기 시작하면서, 라 플라타와의 관계는 불편해지고 있으며 브라질과의 관계가 훨씬 더 밀접해지고 있는 것은 당연합니다. 어떤 상황에서든 볼리비아는 현명하게 처신해야 합니다. 최종 결정을 내릴 순간이 올 때 위해서 말입니다..."
 #"Treaty of P?troplis" what???
-bol.3.a:0 "Those Argentinians will get what's coming for them!"
+bol.3.a:0 "그 아르헨티나인들은 원하고자 하는 것을 얻을 것이다!"
 bol.4.t:0 "라파스에서 내전이 일어나다"
-bol.4.d:0 "The revolutionary mob have stormed the capital city and have been battling with the Presidential Guard. Future of our country is at stake !"
-bol.4.a:0 "The Presidential Guard is defeated and the Regime is Toppled!"
-bol.4.b:0 "The people are driven back into the hillsides where they belong!"
-bol.5.t:0 "The New Bolivian Government"
-bol.5.d:0 "The people place their faith in..."
-bol.5.a:0 "Victor Paz Estenssoro and the Movimiento Nacionalista Revolucionario"
+bol.4.d:0 "혁명 폭도들은 수도를 습격했고 대통령 경호원과 싸웠습니다. 우리 나라의 미래가 위태롭습니다!"
+bol.4.a:0 "대통령 경호원이 패배하고 정권이 무너졌다!"
+bol.4.b:0 "사람들이 그들이 있어야 할 언덕으로 다시 몰려갔다!"
+bol.5.t:0 "새 볼리비아 정부"
+bol.5.d:0 "사람들은 그들의 믿음을..."
+bol.5.a:0 "빅토르 파스 에스텐소로와 민족혁명주의 운동에 주었다"
 bol.5.b:0 "Navarro-Marof and Arze y Arze, of the Syndicalist Party of Bolivia"
 bol.6.t:0 "Presidential Elections, 1940"
 bol.6.d:0 "Polling stations all over the country were open today for our Presidential elections. Several parties launched their candidates and, by the end of the day, our new president and vice-president were announced..."
