--- a/Kaiserreich Korean Translation/localisation/KR_Germany_East_Asia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_East_Asia_l_english.yml
@@ -75,7 +75,7 @@ GEA_localtroops4:0 "의무에 따른 권리"
 GEA_localtroops4_desc:0 "우리 식민지의 주체들은 현재 군대 내에서 복무한다 하더라도 독일 시민들과 같은 권리를 누리지 못하고 있습니다. 더 많은 신병을 유치하기 위해서는 이것이 바뀌어야 하며, 군복무는 영광으로 여겨져야 합니다."
 GEA_budget1:0 "재정 긴축"
 GEA_budget1_desc:0 "베를린에서 세계 금융 위기가 발생함에 따라 우리는 지출을 줄이고 즉시 수입을 늘려야 하며 그렇지 않으면 엄청난 예산 적자를 겪어야만 합니다."
-GEA_budget2:0 "식민지 마크"
+GEA_budget2:0 "식민지 마르크"
 GEA_budget2_desc:0 "아프리카에 있는 우리 친구들과는 달리, 우리는 1927년에 도입된 제국마르크의 사용을 권장하기 위해 진지한 노력을 한적이 없습니다. 제국마르크의 사용을 요구함으로서 우리는 식민지 전체에 걸쳐 균일성을 높이고 수익을 모으는 능력을 향상시킬 수 있습니다."
 GEA_budget3:0 "부담 나누기"
 GEA_budget3_desc:0 "현지 유럽 정착민들은 오랫동안 우리의 보호 혜택을 누렸으며 그들이 누린것에 비해 아주 적은 세금을 냈습니다. 하지만 우리가 식민지를 운영하기 위해 그들의 협력에 의존하고 있으며 또 너무 멀리 갈 수 없기 때문에, 그들과 합의를 하는 것이 더 나을 것입니다."
@@ -234,64 +234,64 @@ Ostasien.6.d:0 "오늘, 중국과 인도의 국경 근처에 위치한 전초기
 Ostasien.6.a:0 "전력을 다해 도적놈들을 쳐부숴라!"
 Ostasien.6.b:0 "인도차이나 전역에 계엄령을 선포하라!"
 
-Ostasien.7.t:0 "인도 차이나의 비극" # FRA
-Ostasien.7.d:0 "”Viet-Nam! Viet-Nam! Viet-Nam! Homeland of the South! Thirteen times, I heard the outcry in front of the guillotine of Yen-Bai. Thirteen men sentenced to death shouted it, one by one, two metres away from climbing the scaffold.”\n\n— A French journalist Louis Roubaud witnessed the recent brutal German crackdown in Indochina, our former colony and the current bastion of German colonialism in the Far East. Now General Jacques Doriot, a close friend of the late Indochinese revolutionary Ho Chi Minh spoke for an intervention in Indochina. Since the end of the Weltkrieg, thousands of Indochinese students, soldiers and workers have stayed in France and become firm revolutionaries. If we send them back with sufficient arms, they can organise an uprising in Cochinchina. This could destabilise the German colonial empire and serve the world revolution."
-Ostasien.7.a:0 "Bon voyage, Indochinese comrades!"
-Ostasien.7.b:0 "We are not the modern Pigneau de Behaine."
+Ostasien.7.t:0 "인도차이나의 비극" # FRA
+Ostasien.7.d:0 "”베트남! 베트남! 베트남! 남방의 우리 고향! 나는 옌-바이의 교수대 앞에서 열세 번의 외침을 들었다. 열세 명의 남자가, 교수대를 타고 불과 일이 미터 떨어진 곳에서 죽음을 앞두고 소리치고 있었다.”\n\n— 프랑스 언론인 루이 루보는 옛 우리의 식민지이자 독일 식민주의의 극동 전초기지인 인도차이나에서 벌어진 독일의 잔혹한 탄압을 목격했습니다. 고인이 된 인도차이나의 혁명가 호치민의 절친한 친구인 자크 도리오 장군은 우리가 인도차이나 사태에 개입할 것을 주장했습니다. 세계 대전이 끝났을 때, 수천 명의 인도차이나 학생들, 군인들, 노동자들은 프랑스에 머물면서 굳건한 혁명가가 되었습니다. 우리가 그들을 충분한 양의 무기들과 함께 돌려보내면, 그들은 코친차이나에서 봉기를 조직할 수 있을 것입니다. 이것은 독일 식민제국을 교란시킴과 동시에 세계 혁명에 한 발짝 더 다가갈 수 있는 길입니다."
+Ostasien.7.a:0 "행운을 빈다, 인도차이나인 동지들!"
+Ostasien.7.b:0 "우리는 현대판 피뇨 드 베엔이 아니다."
 
-Ostasien.8.t:0 "인도 차이나 사람들의 비극" # BHC
-Ostasien.8.d:0 "”Viet Nam! Viet Nam! Viet Nam! Homeland of the South! Thirteen times, I heard the outcry in front of the guillotine of Yen-Bai. Thirteen men sentenced to death shouted it, one by one, two metres away from climbing the scaffold.”\n\n— A French journalist Louis Roubaud witnessed the recent brutal German crackdown in Indochina, the bastion of German colonialism in the Far East. Now the Indochinese revolutionaries in Calcutta are lobbying for assistance. If we send equipment and volunteers, with German police and gendarmes occupied in Tonkin, the Indochinese revolutionaries can organise an uprising in Cochinchina. This could destabilise the German colonial empire. This will be an important step in our international revolution project."
-Ostasien.8.a:0 "Send our help"
-Ostasien.8.b:0 "We are not interested."
+Ostasien.8.t:0 "인도차이나의 비극" # BHC
+Ostasien.8.d:0 "”베트남! 베트남! 베트남! 남방의 우리 고향! 나는 옌-바이의 교수대 앞에서 열세 번의 외침을 들었다. 열세 명의 남자가, 교수대를 타고 불과 일이 미터 떨어진 곳에서 죽음을 앞두고 소리치고 있었다.”\n\n— 프랑스 언론인 루이 루보는 독일 식민주의의 극동 전초기지인 인도차이나에서 벌어진 독일의 잔혹한 탄압을 목격했습니다. 이제 캘커타의 인도차이나 혁명가들은 본인들을 지원해줄 세력을 찾고 있습니다. 만약 우리가 독일 경찰과 헌병들이 점령한 통킹에 군수물자와 자원병들을 보낸다면, 인도차이나 혁명가들은 코친차이나에서 봉기를 조직할 수 있을 것입니다. 이것은 독일 식민제국을 교란시킴과 동시에 세계 혁명에 한 발짝 더 다가갈 수 있는 길입니다."
+Ostasien.8.a:0 "도움을 보내자"
+Ostasien.8.b:0 "흥미 없다."
 
 # Bao Dai Reform
 Ostasien.9.t:0 "황제 바오 다이의 인도 차이나로의 복귀"
-Ostasien.9.d:0 "안남의 군주인 바오 다이는 최근 독일에서 유학을 마치고 인도차이나로 돌아왔습니다. 불행하게도 그는 단지 성직자의 역할에 만족하지 않고 있지만, 신중하게 통제된 군주제는 오히려 우리가 시골의 불안정을 완화하고 국민들의 지지를 얻게 해 줄 것입니다. 그러나 사이공에 정착한 유럽인 정착민들은 안남 현지인과 권력을 공유하려는 어떠한 시도도 단호히 반대하고 있습니다."
+Ostasien.9.d:0 "안남의 군주인 바오 다이는 최근 독일에서 유학을 마치고 인도차이나로 돌아왔습니다. 불행하게도 그는 단지 종교 지도지의 역할에 만족하지 않고 있지만, 신중하게 통제된 군주제는 오히려 우리가 시골의 불안정을 완화하고 국민들의 지지를 얻게 해 줄 것입니다. 그러나 사이공에 정착한 유럽인 정착민들은 안남 현지인과 권력을 공유하려는 어떠한 시도도 단호히 반대하고 있습니다."
 Ostasien.9.a:0 "환영하오, 우리 꼭두각시 황제 폐하"
-Ostasien.9.b:0 "아마도 그는 유학을 계속해야 할 것이다"
+Ostasien.9.b:0 "그는 유학이나 계속해야 할 것이다"
 
 Ostasien.10.t:0 "바오 다이의 개혁:첫 걸음"
-Ostasien.10.d:0 "Having ascended to the throne, Bao Dai has recruited several reform-minded figures into his court, including Neo-traditionalist intellectual Pham Quyhn and Catholic administrator Ngo Dinh Diem. Now his ministers have decided to initiate an administrative reform to revitalise the dysfunctional bureaucratic system. Currently the mandarins in the protectorate of Annam only nominally run the country, while their European advisors hold true power. Bao Dai's reform will certainly damage the European monopolisation of power."
-Ostasien.10.a:0 "It is necessary"
-Ostasien.10.b:0 "Stop him. He has gone too far"
+Ostasien.10.d:0 "제위에 오른 바오 다이는 내각에 신전통주의자 지식인인 팜 퀸과 카톨릭 행정관 응오 딘 지엠을 포함한 개혁파 인사들을 몇 명 임명했습니다. 이제 그의 장관들은 기능 장애가 있는 관료제를 부활시키기 위해 행정 개혁을 시작하기로 결정했습니다. 현재 안남의 보호 구역에 있는 관리들은 명목상으로만 이 나라를 통치하고 있고, 유럽의 고문들이 진정한 권력을 쥐고 있습니다. 바오 다이의 이 개혁이 유럽인들의 권력 독점을 손상시킬 것은 분명합니다."
+Ostasien.10.a:0 "필요한 일이다"
+Ostasien.10.b:0 "너무 멀리 갔다. 그를 멈춰라"
 
 Ostasien.11.t:0 "바오 다이의 개혁:두 걸음 "
-Ostasien.11.d:0 "After the administrative reform, Bao Dai's cabinet has begun to further centralise power. The recent turmoil in Indochina offers him a good excuse. He implores us to grant him authority to set up an imperial police force. Bao Dai and his ministers argue that only imperial police carrying order from the imperial court in Hue can effectively pacify the disobedient peasants and restore order in Annam."
-Ostasien.11.a:0 "It will help"
-Ostasien.11.b:0 "Giving the Annamese power is dangerous"
+Ostasien.11.d:0 "행정 개혁 이후, 바오 다이 내각은 더욱 중앙 집권화하기 시작했습니다. 최근의 인도차이나 소요 사태는 그에게 좋은 핑계거리가 되고 있습니다. 그는 우리에게 본인이 제국 경찰을 설립할 수 있는 권한을 부여해 달라고 간청하고 있습니다. 바오 다이와 그의 장관들은 오직 황실의 명령을 수행하는 제국 경찰만이 효과적으로 반항하는 농민들을 진정시키고 안남의 질서를 회복시킬 수 있다고 주장합니다."
+Ostasien.11.a:0 "도움이 될 것이다"
+Ostasien.11.b:0 "안남 출신에게 권력을 주는 것은 위험하다"
 
 # Revolution in Cochinchina
 
-Ostasien.12.t:0 "코친 차이나의 불안정"
-Ostasien.12.d:0 "With our forces occupied suppressing the nationalists in Tonkin, the situation to the south in Cochinchina is growing increasingly unstable. Strikes have decreased but trade union activists are reported to be holding frequent meetings, and rumors are spreading that agitators, disguised as monks and merchants, are organising peasants into secret societies in Cochinchina and southern Annam. Additional Intelligence suggests many Vietnamese exiles are illegally crossing the border and entering Indochina. They are likely to be sent by foreign powers to engage in subversive activities. Our officials have invented a new term: "Vietcong", in full Viet Nam Cong Doan (Vietnamese Syndicalist), to designate these red threats."
-Ostasien.12.a:0 "I sense the calm before the storm"
+Ostasien.12.t:0 "코친차이나의 불안정"
+Ostasien.12.d:0 "우리 군대가 통킹의 민족주의자들을 탄압함에 따라 남부 코친차이나의 상황은 점점 더 불안정해지고 있습니다. 파업은 줄었지만 노조 활동가들은 빈번한 집회를 열고 있는 것으로 보도되고 있으며, 스님과 상인으로 위장한 운동가들이 코친차이나 남부의 비밀 사회에 세력을 조직하고 있습니다. 추가 정보에 따르면 많은 베트남 망명자들이 불법으로 국경을 넘어 인도차이나에 입국하고 있다고 합니다. 이들은 외국 세력에 의해 파괴 공작에 참여하도록 보내졌을 가능성이 높습니다. 우리 관계자들은 이러한 붉은 위협을 조장하는 이들을 베트남 생디칼리스트라는 의미의 '비옛 남 콩 도안', 줄여서 베트콩이라는 새로운 용어를 만들어 냈습니다."
+Ostasien.12.a:0 "폭풍 전은 고요한 법이다"
 
 Ostasien.13.t:0 "폴로 콘도르에서의 감옥 탈출"
-Ostasien.13.d:0 "This morning our central prison on Poulo Condor island reported a mass jailbreak! This was clearly a well-organised action; the prisoners escaped through a tunnel under cover of midnight, then embarked on pre-prepared junks and disappeared into the canal networks and marshes of the Mekong Delta. It's estimated that some 150 out of the total 25,000 prisoners escaped. Most are left-wing agitators."
-Ostasien.13.a:0 "This colony has been nothing but trouble!"
+Ostasien.13.d:0 "오늘 아침에 풀로 콘도르 섬의 중앙 교도소에서 대규모 탈옥이 보고되었습니다! 분명히 잘 조직된 탈옥이었습니다. 죄수들은 자정을 틈타 터널을 뚫고 탈출한 후 준비된 낙하산을 타고 메콩 삼각주의 운하와 습지로 사라졌습니다. 총 25,000명의 수감자 중 약 150명이 탈출한 것으로 추정됩니다. 그리고 이들 중 대부분은 좌익 선동가들입니다."
+Ostasien.13.a:0 "이 식민지는 골칫거리만 되는군!"
 
 Ostasien.14.t:0 "빈 딘 코뮌 운동"
-Ostasien.14.d:0 "Binh Dinh province, the home of Tay Son rebellion, is witnessing a dramatic escalation of its peasant movement. Demonstrators initially demanded an end to corvée labour, an equivalent to serfdom, but when they were ignored by local administrators angry peasants began to burn down administrative buildings, town halls and railway stations; destroy tax registers, and pillage police stations. The local administration has been paralysed and associations called “communes” have been formed, and the movement has begun to spread to other provinces in southern Annam and Mekong. Clearly the Vietcong are behind all these movements!"
-Ostasien.14.a:0 "Perhaps we can deal with this peacefully"
-Ostasien.14.b:0 "Send in the troops!"
+Ostasien.14.d:0 "타이 손 반란의 본거지인 빈 딘 지방은 최근 농민 봉기 움직임이 폭등하고 있었습니다. 시위자들은 처음에는 농노들의 강제 부역 중단을 요구했는데, 그들이 지방 관리들에 의해 무시되었을 때 분노한 농민들은 들고일어나 행정 건물, 시청, 철도 역들을 불 태우기 시작했습니다. 지방 행정부는 마비되었고 “코뮌” 이라 불리는 단체가 생겨났으며, 이 움직임은 남부 안남과 메콩 강의 다른 지방으로 확산되었습니다. 베트콩들이 이 배후에 있는 것이 분명합니다!"
+Ostasien.14.a:0 "아마 우리는 평화롭게 해결할 수 있을 것이다"
+Ostasien.14.b:0 "병력을 파견하라!"
 
 Ostasien.15.t:0 "사이공 반란"
-Ostasien.15.d:0 "Yesterday concerted insurgencies simultaneously broke out from Tonkin to Cochinchina. Trade Unions went into general strike and tried to occupy municipal government buildings. While in most places order has been restored, the Vietcong brought their peasant rebellion from Binh Dinh and Mekong to Saigon and entered the city. Local garrisons defected and rebels seized control of key communications and administrative facilities in Saigon!"
-Ostasien.15.a:0 "Vive la Revolution! (Switch to INC)"
-Ostasien.15.b:0 "Damn the Vietcong!"
+Ostasien.15.d:0 "어제 통킹에서 코친차이나까지 조직된 반란이 동시에 일어났습니다. 노동 조합은 총파업에 돌입했고 시 청사를 점거하려고 시도했습니다. 대부분의 지역에서 질서가 회복되는 동안, 베트콩은 빈 딘과 메콩 강의 농민 반란군들을 사이공으로 이동시켰습니다. 현지 기독교인들은 빠져나와 망명했고, 반군들이 사이공의 주요 통신 및 행정 시설을 장악했습니다!"
+Ostasien.15.a:0 "혁명 만세! (INC로 플레이합니다)"
+Ostasien.15.b:0 "젠장할 베트콩!"
 
-Ostasien.16.t:0 "인도 차이나 상황 악화"
-Ostasien.16.d:0 "The situation in Indochina has deteriorated, with the insurgents being much harder than we thought to pacify. Vietcong regular forces are pushing northward while their guerrilla units harass our logistics and spread fear. Many settlers doubt if we can hold Indochina anymore and demand an evacuation of valuable assets to other colonies."
-Ostasien.16.a:0 "Evacuate assets!"
-Ostasien.16.b:0 "Everything is alright!"
+Ostasien.16.t:0 "인도차이나 상황 악화"
+Ostasien.16.d:0 "인도차이나의 상황은 악화되어 반란 세력은 우리 생각보다 훨씬 더 강력해졌습니다. 베트콩의 정규 병력이 북쪽으로 진격하는 동시에 그들의 게릴라 부대는 우리의 물류를 압박하며 두려움을 확산시키고 있습니다. 많은 정착민들은 우리가 더 이상 인도차이나를 소유할 수 있을지 의심하고 있고 귀중한 자산을 다른 식민지로 철수시킬 것을 요구합니다."
+Ostasien.16.a:0 "자산을 철수시켜라!"
+Ostasien.16.b:0 "모든 것은 문제 없다!"
 
-Ostasien.17.t:0 "인도 차이나 상황 악화"
-Ostasien.17.d:0 "It seems that, although official reports from our far eastern colonies claim significant successes in suppressing the insurgency, according to military intelligence the situation in Indochina has actually deteriorated. Pacifying the Vietcong rebels seems to have been more than the admiralty could handle. Some major cities and strategic positions have fallen into rebel hands; fear and turmoil are spreading. Maybe Deutsch-Ostasien needs some help?"
-Ostasien.17.a:0 "They can handle this."
-Ostasien.17.b:0 "Send reinforcements!"
-Ostasien.17.c:0 "A land war in Asia? Tally ho!"
+Ostasien.17.t:0 "인도차이나 상황 악화"
+Ostasien.17.d:0 "비록 극동 식민지들의 공식적인 보고는 반란 진압에 상당한 성공을 거두었다고 주장하지만, 인도차이나 현지의 군사 정보에 따르면, 실제 상황은 상당히 악화되었습니다. 베트콩 반군들을 제압하는 것은 관리자들이 감당할 수 있는 것 이상이었던 것 같습니다. 일부 주요 도시들과 전략적 요충지들이 반군의 손에 넘어갔고;두려움과 혼란은 계속 퍼지고만 있습니다. 독일령 동아시아에 도움을 주어야 할까요?"
+Ostasien.17.a:0 "그들이 통제할 수 있다."
+Ostasien.17.b:0 "증원을 보내라!"
+Ostasien.17.c:0 "아시아에서 육상전이라고? 헛소리!"
 
-Ostasien.18.t:0 "인도 차이나가 평화안을 보내다"
+Ostasien.18.t:0 "인도차이나가 평화안을 보내다"
 Ostasien.18.d:0 "The uprisings in Indochina have worsened. Key positions have fallen to Vietcong bandits and we are struggling to cope. Now Indochinese rebels send us an initiative of peace talk. Despite concerns that this will be considered as a humiliation, a wise move might be to give up control of the region."
 Ostasien.18.a:0 "No, we will keep fighting these rebels!"
 Ostasien.18.b:0 "We can't afford fighting anymore"
@@ -300,19 +300,19 @@ Ostasien.19.t:0 "평화 회담 실패"
 Ostasien.19.d:0 "German imperialists refused our peace initiative and decided to continue the war."
 Ostasien.19.a:0 "Only guns can talk to the imperialists!"
 
-Ostasien.20.t:0 "인도 차이나에서의 승리"
+Ostasien.20.t:0 "인도차이나에서의 승리"
 Ostasien.20.d:0 "Germany accepted the peace initiative and retreat from the Indochinese peninsula. We have fulfilled the mission of forcing German imperialists to withdraw. Indochina is now liberated from the German colonial regime! This is a great victory for our people and a major defeat for the German Imperialists and their lackeys."
 Ostasien.20.a:0 "Pickelhaube go home!"
 
 Ostasien.21.t:0 "좋은 소식, 나쁜 소식"
 Ostasien.21.d:0 "It seems that Berlin is concerned with the situation in Indochina. The bad news is, they discovered the fact that we are not doing well and harshly criticised us. The good news is, they've sent reinforcements to suppress Vietcong insurgents."
-Ostasien.21.a:0 "Good News"
+Ostasien.21.a:0 "좋은 소식이다"
 
-Ostasien.22.t:0 "인도 차이나에서의 승리"
+Ostasien.22.t:0 "인도차이나에서의 승리"
 Ostasien.22.d:0 "Our glorious army has managed to thwart the Vietcong revolt in Indochina! This is a glorious day for Germany!"
 Ostasien.22.a:0 "Sehr gut, Kameraden!"
 
-Ostasien.23.t:0 "인도 차이나에서의 전쟁 확대"
+Ostasien.23.t:0 "인도차이나에서의 전쟁 확대"
 Ostasien.23.d:0 "With German Empire committing its main force to Indochinese peninsula, the resistance war has escalated to an unprecedented level! But we will triumph, for the just cause of liberation is invincible. It's also rumored that other great powers are trying to transform Indochinese peninsula into a quagmire for Germany..."
 Ostasien.23.a:0 "Fight!"
 
