--- a/Kaiserreich Korean Translation/localisation/KR_Germany_East_Asia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_East_Asia_l_english.yml
@@ -291,36 +291,36 @@ Ostasien.17.a:0 "그들이 통제할 수 있다."
 Ostasien.17.b:0 "증원을 보내라!"
 Ostasien.17.c:0 "아시아에서 육상전이라고? 헛소리!"
 
-Ostasien.18.t:0 "인도차이나가 평화안을 보내다"
-Ostasien.18.d:0 "The uprisings in Indochina have worsened. Key positions have fallen to Vietcong bandits and we are struggling to cope. Now Indochinese rebels send us an initiative of peace talk. Despite concerns that this will be considered as a humiliation, a wise move might be to give up control of the region."
-Ostasien.18.a:0 "No, we will keep fighting these rebels!"
-Ostasien.18.b:0 "We can't afford fighting anymore"
+Ostasien.18.t:0 "인도차이나가 평화 제안을 보내다"
+Ostasien.18.d:0 "인도차이나의 봉기는 악화되었습니다. 베트콩 도적놈들에게 주요 거점이 함락되었고 우리는 대처하기 위해 애쓰고 있습니다. 이제 인도차이나 반군들이 우리에게 평화 회담을 제안했습니다. 이번 사태가 굴욕으로 간주될 것이라는 우려가 상당하지만 이 지역에 대한 통제를 포기하는 것이 현명한 조치일 수 있습니다."
+Ostasien.18.a:0 "아니, 우리는 반란군 놈들과 계속 싸운다!"
+Ostasien.18.b:0 "우리는 이 이상 싸울 여유가 없다"
 
 Ostasien.19.t:0 "평화 회담 실패"
-Ostasien.19.d:0 "German imperialists refused our peace initiative and decided to continue the war."
-Ostasien.19.a:0 "Only guns can talk to the imperialists!"
+Ostasien.19.d:0 "독일 제국주의자들은 우리의 평화 제안을 거부하고 전쟁을 계속하기로 결정했습니다."
+Ostasien.19.a:0 "오로지 총만이 제국주의자들과 대화할 수 있다!"
 
 Ostasien.20.t:0 "인도차이나에서의 승리"
-Ostasien.20.d:0 "Germany accepted the peace initiative and retreat from the Indochinese peninsula. We have fulfilled the mission of forcing German imperialists to withdraw. Indochina is now liberated from the German colonial regime! This is a great victory for our people and a major defeat for the German Imperialists and their lackeys."
-Ostasien.20.a:0 "Pickelhaube go home!"
+Ostasien.20.d:0 "독일은 인도차이나 반도에서의 평화와 철수를 받아들였습니다. 우리는 독일 제국주의자들을 격퇴하는 사명을 완수했습니다. 인도차이나는 이제 독일 식민지 정권에서 해방되었습니다! 이것은 우리 국민들에게 큰 승리이며 독일의 제국주의자들과 그 앞잡이들에게는 큰 패배입니다."
+Ostasien.20.a:0 "피켈하우베는 꺼져라!"
 
 Ostasien.21.t:0 "좋은 소식, 나쁜 소식"
-Ostasien.21.d:0 "It seems that Berlin is concerned with the situation in Indochina. The bad news is, they discovered the fact that we are not doing well and harshly criticised us. The good news is, they've sent reinforcements to suppress Vietcong insurgents."
-Ostasien.21.a:0 "좋은 소식이다"
+Ostasien.21.d:0 "베를린은 인도차이나의 상황에 대해 우려하고 있는 것 같습니다. 나쁜 소식은, 그들이 우리가 제대로 대처하지 못한 것에 대해 우리를 혹독하게 비판했다는 것입니다. 좋은 소식은, 그들이 베트콩 저항 세력을 진압하기 위해 증원 부대를 보냈다는 것입니다."
+Ostasien.21.a:0 "좋은 소식이군"
 
 Ostasien.22.t:0 "인도차이나에서의 승리"
-Ostasien.22.d:0 "Our glorious army has managed to thwart the Vietcong revolt in Indochina! This is a glorious day for Germany!"
-Ostasien.22.a:0 "Sehr gut, Kameraden!"
+Ostasien.22.d:0 "우리의 영광스러운 군대는 인도차이나에서 있었던 베트콩의 반란을 결국 막아냈습니다! 오늘은 독일에게 영광스러운 날입니다!"
+Ostasien.22.a:0 "아주 잘했다, 제군들!"
 
 Ostasien.23.t:0 "인도차이나에서의 전쟁 확대"
-Ostasien.23.d:0 "With German Empire committing its main force to Indochinese peninsula, the resistance war has escalated to an unprecedented level! But we will triumph, for the just cause of liberation is invincible. It's also rumored that other great powers are trying to transform Indochinese peninsula into a quagmire for Germany..."
-Ostasien.23.a:0 "Fight!"
+Ostasien.23.d:0 "독일 제국이 인도차이나 반도에 정규군을 투입하면서, 저항 전쟁은 전례 없는 수준으로 커졌습니다! 그러나 우리는 승리할 것입니다. 우리의 정당한 해방군들은 무적이기 때문입니다. 또한 다른 강대국들이 인도차이나 반도를 독일의 수렁으로 만들어버리려 한다는 소문도 있습니다..."
+Ostasien.23.a:0 "싸우자!"
 
 Ostasien.25.t:0 "바오 다이 해결책" # Extra
-Ostasien.25.d:0 "With Cochinchina fallen to the Vietcong and guerrillas rising everywhere, the whole of Indochina is in a state of emergency. Local elites and anti-syndicalist nationalists have rallied behind Emperor Bao Dai and propose a solution: If we honour the protectorate treaty, which means granting Nguyen Dynasty greater autonomy in Annam as well as Tonkin, they will help to pacify the rural areas, mobilise local resources and defeat the rebels. Otherwise, the prevalent anti-colonialist sentiment will give the Vietcong an edge. Bao Dai's missive ends ominously, stating that if Germany doesn't respond to Vietnamese nationalism, 'Every village will be a nest of resistance, each former collaborator an enemy, and your officials and colonists will themselves seek to leave this atmosphere, which will choke them.'"
-Ostasien.25.b:0 "We can handle it ourselves"
-Ostasien.25.a:0 "We need his help."
-#Ostasien.16.c: "Bao Dai will lead Annam to peace and order (Release & switch to VIE)"
+Ostasien.25.d:0 "코친차이나가 베트콩에 함락당하고 게릴라들이 도처에 출몰하면서, 인도차이나 전 지역이 비상 사태에 놓여 있습니다. 지역 엘리트들과 반-생디칼리즘 성향 민족주의자들은 바오 다이 황제를 지지하며 해결책을 제시했습니다: 만약 우리가 보호국 조약을 포기하고, 응우옌 왕조에게 안남 그리고 통킹 지역의 자치권을 부여한다면, 대신에 그들은 우리를 도와 농촌 지역을 안정시키고, 지역 자원을 활용하여 반란군을 격퇴할 것입니다. 그렇게 하지 않으면 널리 퍼진 반식민주의 정서가 베트콩에게 힘을 실어줄 것입니다. 바오 다이의 편지는 독일이 베트남의 민족주의를 얕보았을 때 일어날 사태에 대한 불길한 예측으로 끝을 맺습니다. '모든 마을은 저항의 보금자리가 될 것이고, 옛 협력자들은 당신들의 적이 될 것입니다. 그리고 바로 그들이 여러분의 관리들과 식민지 주민들의 목을 조를 것입니다.'"
+Ostasien.25.b:0 "우리는 스스로 해결할 수 있다"
+Ostasien.25.a:0 "우리는 그의 도움이 필요하다."
+#Ostasien.16.c: "바오 다이는 안남을 평화와 질서로 이끌 것이다. (VIE를 해방시키고 플레이합니다)"
 
 Ostasien.30.t:0 "하락하는 물가"
 Ostasien.30.d:0 "The prices of rice and rubber are rapidly falling across the colonies. The farmers and plantation owners, relying on rice and rubber exports, have been hit hard, especially in our two major colonies of Indcohina and Malaya. It's possible to control the price in one colony, but our resources are limited, and this will almost certainly come at the cost of the other?"
