--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -3348,36 +3348,36 @@ JBS_national_populist:0 "자발 샴마르"
 JBS_national_populist_ADJ:0 "샴마르"
 JBS_national_populist_DEF:0 "자발 샴마르"
 
-JOR_totalist:0 "마쉬리치 독립국"
-JOR_totalist_ADJ:0 "마쉬리치"
-JOR_totalist_DEF:0 "마쉬리치 독립국"
-JOR_syndicalist:0 "마쉬리치 노동 연합"
-JOR_syndicalist_ADJ:0 "마쉬리치"
-JOR_syndicalist_DEF:0 "마쉬리치 노동 연합"
-JOR_radical_socialist:0 "마쉬리치 연방"
-JOR_radical_socialist_ADJ:0 "마쉬리치"
-JOR_radical_socialist_DEF:0 "마쉬리치 연방"
-JOR_social_democrat:0 "마쉬리치"
-JOR_social_democrat_ADJ:0 "마쉬리치"
-JOR_social_democrat_DEF:0 "마쉬리치"
-JOR_social_liberal:0 "마쉬리치"
-JOR_social_liberal_ADJ:0 "마쉬리치"
-JOR_social_liberal_DEF:0 "마쉬리치"
-JOR_market_liberal:0 "마쉬리치"
-JOR_market_liberal_ADJ:0 "마쉬리치"
-JOR_market_liberal_DEF:0 "마쉬리치"
-JOR_social_conservative:0 "마쉬리치"
-JOR_social_conservative_ADJ:0 "마쉬리치"
-JOR_social_conservative_DEF:0 "마쉬리치"
-JOR_authoritarian_democrat:0 "마쉬리치 왕국"
-JOR_authoritarian_democrat_ADJ:0 "마쉬리치"
-JOR_authoritarian_democrat_DEF:0 "마쉬리치 왕국"
-JOR_paternal_autocrat:0 "마쉬리치 왕국"
-JOR_paternal_autocrat_ADJ:0 "마쉬리치"
-JOR_paternal_autocrat_DEF:0 "마쉬리치 왕국"
-JOR_national_populist:0 "마쉬리치국"
-JOR_national_populist_ADJ:0 "마쉬리치"
-JOR_national_populist_DEF:0 "마쉬리치국"
+JOR_totalist:0 "마쉬리크 독립국"
+JOR_totalist_ADJ:0 "마쉬리크"
+JOR_totalist_DEF:0 "마쉬리크 독립국"
+JOR_syndicalist:0 "마쉬리크 노동 연합"
+JOR_syndicalist_ADJ:0 "마쉬리크"
+JOR_syndicalist_DEF:0 "마쉬리크 노동 연합"
+JOR_radical_socialist:0 "마쉬리크 연방"
+JOR_radical_socialist_ADJ:0 "마쉬리크"
+JOR_radical_socialist_DEF:0 "마쉬리크 연방"
+JOR_social_democrat:0 "마쉬리크"
+JOR_social_democrat_ADJ:0 "마쉬리크"
+JOR_social_democrat_DEF:0 "마쉬리크"
+JOR_social_liberal:0 "마쉬리크"
+JOR_social_liberal_ADJ:0 "마쉬리크"
+JOR_social_liberal_DEF:0 "마쉬리크"
+JOR_market_liberal:0 "마쉬리크"
+JOR_market_liberal_ADJ:0 "마쉬리크"
+JOR_market_liberal_DEF:0 "마쉬리크"
+JOR_social_conservative:0 "마쉬리크"
+JOR_social_conservative_ADJ:0 "마쉬리크"
+JOR_social_conservative_DEF:0 "마쉬리크"
+JOR_authoritarian_democrat:0 "마쉬리크 왕국"
+JOR_authoritarian_democrat_ADJ:0 "마쉬리크"
+JOR_authoritarian_democrat_DEF:0 "마쉬리크 왕국"
+JOR_paternal_autocrat:0 "마쉬리크 왕국"
+JOR_paternal_autocrat_ADJ:0 "마쉬리크"
+JOR_paternal_autocrat_DEF:0 "마쉬리크 왕국"
+JOR_national_populist:0 "마쉬리크국"
+JOR_national_populist_ADJ:0 "마쉬리크"
+JOR_national_populist_DEF:0 "마쉬리크국"
 
 KAC_totalist:0 "카친 코뮌"
 KAC_totalist_ADJ:0 "카친"
